Change capitalization of the output file

--- a/mdsl/CMakeLists.txt
+++ b/mdsl/CMakeLists.txt
@@ -27,6 +27,7 @@ else()
 endif()
 
 set_target_properties(MDSL PROPERTIES
+    OUTPUT_NAME "mdsl"
     CXX_STANDARD 20
     CXX_STANDARD_REQUIRED ON
     VERSION ${PROJECT_VERSION}
