--- a/mdsl/CMakeLists.txt
+++ b/mdsl/CMakeLists.txt
@@ -32,7 +32,7 @@ set_target_properties(MDSL PROPERTIES
     CXX_STANDARD_REQUIRED ON
     VERSION ${PROJECT_VERSION}
     SOVERSION 1
-    PUBLIC_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/include/MDSL.h"
+    PUBLIC_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/include/mdsl.h"
 )
 
 include(GNUInstallDirs)
