Add TokenStream with safe backtracking for parser combinators and set up tests/ directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,9 @@ endif()
 project ("MDSL")
 
 add_subdirectory ("mdsl")
+
+option(BUILD_TESTS "Build the tests" ON)
+if(BUILD_TESTS)
+  enable_testing()
+  add_subdirectory("tests")
+endif()
